--- a/KirkMyXMX/KirkMyXMX/Content/bootstrap.css
+++ b/KirkMyXMX/KirkMyXMX/Content/bootstrap.css
@@ -4501,7 +4501,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #222222;
+  background-color: rgba(0, 0, 0, 0.49);
   border-color: #080808;
 }
 
@@ -4525,8 +4525,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #ffffff;
+ /* color: #ffffff;
   background-color: transparent;
+     */ /*I was here!*/
+  text-align:center;
+  box-shadow: 0 8px 16px 0 rgba(35, 31, 6, 0), 0 6px 20px 0 rgba(212, 212, 212, 0.77);
+  color: #000000;
+  background-color: rgba(255, 255, 255, 0.92);
 }
 
 .navbar-inverse .navbar-nav > .active > a,
