--- a/KirkMyXMX/KirkMyXMX/Views/Home/Contact.cshtml
+++ b/KirkMyXMX/KirkMyXMX/Views/Home/Contact.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
+@{
+    Layout = "~/Views/Shared/_LayoutMain.cshtml";
+}
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
