--- a/KirkMyXMX/KirkMyXMX/Views/Shared/_Layout.cshtml
+++ b/KirkMyXMX/KirkMyXMX/Views/Shared/_Layout.cshtml
@@ -2,10 +2,12 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title – приложение ASP.NET</title>
+    <meta name="robots" content="noindex,follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+    <title>@ViewBag.Title – KirkXMX</title>
    
 
     <script type="text/javascript">
@@ -18,34 +20,17 @@
         window.appInsights=appInsights;
         appInsights.trackPageView();
     </script>
-    
-
-    <meta name="author" content="Sam Norton">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
+  
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/my-css/normalize.css")
     @Styles.Render("~/Content/my-css/style.css")
-
-    
-
+    @Styles.Render("~/Content/KStile.css")
+    @Styles.Render("~/Content/kirk7byStyle.css")
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Raleway:400,200,300,500,700,600,800,900' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
-    
-
-    
-
-    <meta name="robots" content="noindex,follow" />
-
-    
 </head>
 <body>
-    
-
-   <!--
-
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -54,21 +39,31 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Главная", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                    <li>@Html.ActionLink("О программе", "About", "Home")</li>
-                    <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
+                <ul class="nav navbar-nav dropdown buttons-head-menu">
+                    <li>
+                        @Html.ActionLink("Мои проекты", "Index", "Home")
+                        <ul class="nav navbar-nav dropdown buttons-head-menu-quadro">
+                            <li><a href="#">Sub Menu 1</a></li>
+                            <li><a href="#">Sub Menu 2</a></li>
+                            <li><a href="#">Sub Menu 3</a></li>
+                        </ul>
+                    </li>
+                    <li>@Html.ActionLink("Развлечения", "About", "Home")</li>
+                    <li>@Html.ActionLink("Контакты", "Contact", "Home")</li>
+                    <li>
+                        <a class="dropdown-top" href="/">Тестирование ошибок</a> 
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-       -->
+     
     @RenderBody()
-    <div class="container body-content">
+    <div>
         
         <hr />
         <footer>
